--- a/user/templates/user/user_register.html
+++ b/user/templates/user/user_register.html
@@ -2,28 +2,17 @@
 {% load static %}
 
 {% block content %}
-<header class="masthead" style="background-image: url({% static 'img/home-bg.jpg' %})">
-    <div class="container position-relative px-4 px-lg-5">
-        <div class="row gx-4 gx-lg-5 justify-content-center">
-            <div class="col-md-10 col-lg-8 col-xl-7">
-                <div class="site-heading">
-                    <h1>회원가입</h1>
-                </div>
-            </div>
-        </div>
-    </div>
-</header>
+<h1>회원가입</h1>
 
 <!-- Main Content-->
-<div class="container px-4 px-lg-5">
-    <div class="row gx-4 gx-lg-5 justify-content-center">
-        <div class="col-md-10 col-lg-8 col-xl-7">
-            <form action="{% url 'user:register' %}" method="post">
-                {% csrf_token %}
-                {{ form.as_p }}
-                <input type="submit" value="회원가입">
-            </form>
-        </div>
-    </div>
-</div>
+<form action="{% url 'user:register' %}" method="post">
+    {% csrf_token %}
+    <label for="email">이메일</label>
+    <input type="email" id="email" name="email" required>
+
+    <label for="password">패스워드</label>
+    <input type="password" id="password" name="password" required>
+
+    <input type="submit" value="회원가입">
+</form>
 {% endblock %}
